# Mini-GPT

./: .gitignore  README.md  generate.py  generate_modern.py  pyproject.toml  train.py  train_modern.py
data/: input.txt
notebooks/: mini_gpt.ipynb
scripts/: leaderboard.py
src/minigpt/: __init__.py  data.py  model.py  modern_model.py  modern_tokenizer.py  tokenizer.py  train.py  train_modern.py
