[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt-next-token"
version = "0.1.0"
description = "Char-level MiniGPT next-token predictor (learning + portfolio repo)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
